--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,12 +12,18 @@ readme = "README.md"
 repository = "https://github.com/misut/hanako.git"
 
 
+[tool.mypy]
+plugins = "pydantic.mypy, sqlalchemy.ext.mypy.plugin"
+pretty = true
+
+
 [tool.poetry.dependencies]
 python = "^3.10"
 kivy = {extras = ["base"], version = "^2.1.0"}
 pydantic = "^1.10.4"
 js2py = "^0.74"
 loguru = "^0.6.0"
+sqlalchemy = "^2.0.1"
 
 
 [tool.poetry.group.dev.dependencies]
