--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ description = "Cross-platform media client"
 authors = ["misut <pkr5207@gmail.com>"]
 license = "MIT"
 packages = [
-    { include = "hanako", from = "src" }
+    {include = "hanako", from = "src"}
 ]
 
 readme = "README.md"
@@ -37,22 +37,24 @@ pretty = true
 
 
 [tool.poetry.dependencies]
-python = "^3.10"
-kivy = {extras = ["base"], version = "^2.1.0"}
-pydantic = "^1.10.4"
+python = ">=3.10,<3.12"
+httpx = "^0.23.3"
 js2py = "^0.74"
+kyrie = {path = "packages/kyrie", develop = true}
 loguru = "^0.6.0"
-sqlalchemy = "^2.0.1"
+pydantic = "^1.10.4"
+sqlalchemy = "^2.0.2"
+flet = "^0.4.0"
 
 
 [tool.poetry.group.dev.dependencies]
-black = "^22.12.0"
+black = "^23.1.0"
 isort = "^5.11.4"
-pylint = "^2.15.9"
-mypy = "^0.991"
-pytest = "^7.2.0"
+pyinstaller = "^5.7.0"
+pytest = "^7.2.1"
 pytest-asyncio = "^0.20.3"
 pytest-cov = "^4.0.0"
+mypy = "^1.0.0"
 
 
 [tool.poetry.scripts]
