--- a/packages/kyrie/pyproject.toml
+++ b/packages/kyrie/pyproject.toml
@@ -18,6 +18,18 @@ pydantic = "^1.10.4"
 black = "^23.1.0"
 isort = "^5.12.0"
 mypy = "^1.0.0"
+pytest = "^7.2.1"
+pytest-cov = "^4.0.0"
+
+
+[tool.poe.tasks]
+_black = "black ."
+_isort = "isort ."
+format = ["_black", "_isort"]
+
+unittest = "pytest -vvsx tests"
+coverage = "pytest --cov=src/hanako tests"
+
 
 [build-system]
 requires = ["poetry-core"]
