--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,19 +32,20 @@ profile = "black"
 
 
 [tool.mypy]
-plugins = "pydantic.mypy, sqlalchemy.ext.mypy.plugin"
+plugins = ["pydantic.mypy", "sqlalchemy.ext.mypy.plugin"]
 pretty = true
 
 
 [tool.poetry.dependencies]
 python = ">=3.10,<3.12"
+aiosqlite = "^0.18.0"
+flet = "^0.4.0"
 httpx = "^0.23.3"
 js2py = "^0.74"
 kyrie = {path = "packages/kyrie", develop = true}
 loguru = "^0.6.0"
 pydantic = "^1.10.4"
-sqlalchemy = "^2.0.2"
-flet = "^0.4.0"
+sqlalchemy = {extras = ["asyncio", "mypy"], version = "^2.0.2"}
 
 
 [tool.poetry.group.dev.dependencies]
