--- a/pyproject.toml
+++ b/pyproject.toml
@@ -47,11 +47,11 @@ sqlalchemy = {extras = ["asyncio", "mypy"], version = "^2.0.2"}
 [tool.poetry.group.dev.dependencies]
 black = "^23.1.0"
 isort = "^5.11.4"
+mypy = "^1.0.0"
 pyinstaller = "^5.7.0"
 pytest = "^7.2.1"
 pytest-asyncio = "^0.20.3"
 pytest-cov = "^4.0.0"
-mypy = "^1.0.0"
 types-aiofiles = "^22.1.0.7"
 
 [tool.poetry.scripts]
@@ -62,6 +62,7 @@ _black = "black ."
 _isort = "isort ."
 format = ["_black", "_isort"]
 
+typetest = "mypy"
 unittest = "pytest -vvsx tests"
 coverage = "pytest --cov=src/hanako tests"
 
