--- a/pyproject.toml
+++ b/pyproject.toml
@@ -43,6 +43,7 @@ kyrie = {path = "packages/kyrie", develop = true}
 loguru = "^0.6.0"
 pydantic = "^1.10.4"
 sqlalchemy = {extras = ["aiosqlite", "asyncio", "mypy"], version = "^2.0.3"}
+tenacity = "^8.2.1"
 
 [tool.poetry.group.dev.dependencies]
 black = "^23.1.0"
